--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@
     justify-content: flex-start ;
 }
 .top{
-    font-size: 2.5rem;
+    font-size: clamp(1.5rem,10vw,2.5rem);
     text-transform: uppercase;
     color: white;
     padding: 1rem;
