--- a/style.css
+++ b/style.css
@@ -41,11 +41,11 @@ form{
 label{
     display: block;
     color: white;
-    font-size: 2rem;
+    font-size: clamp(1rem,8vw,2rem);
     padding-bottom: 1rem;
 }
 input{
-    font-size: 1.5rem;
+    font-size: clamp(1rem,7vw,2rem);
     margin-bottom: 1rem;
     position: relative;
 }
