--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
 
 .wrapper{
     background-color: black;
-    width: clamp(400px, 80vw, 700px);
+    width: clamp(400px, 70vw, 700px);
     height: 70vh;
     opacity: 0.6;
     display: flex;
@@ -25,7 +25,7 @@
     justify-content: flex-start ;
 }
 .top{
-    font-size: clamp(1.5rem,10vw,2.5rem);
+    font-size: clamp(1.25rem,10vw,2.5rem);
     text-transform: uppercase;
     color: white;
     padding: 1rem;
@@ -41,11 +41,11 @@ form{
 label{
     display: block;
     color: white;
-    font-size: clamp(1rem,8vw,2rem);
+    font-size: clamp(.875rem,8vw,2rem);
     padding-bottom: 1rem;
 }
 input{
-    font-size: clamp(1rem,7vw,2rem);
+    font-size: clamp(.8rem,7vw,2rem);
     margin-bottom: 1rem;
     position: relative;
 }
